Add nms repo to get spigot from maven for jitpack.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 
     <repositories>
         <repository>
+            <id>nms-repo</id>
+            <url>https://repo.codemc.org/repository/nms/</url>
+        </repository>
+
+        <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
