--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -5,11 +5,13 @@
     <parent>
         <artifactId>hDropRemover</artifactId>
         <groupId>com.hakan</groupId>
-        <version>1.5.3</version>
+        <version>1.5.4</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
     <artifactId>bukkit</artifactId>
+    <version>1.5.4</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -33,9 +35,9 @@
 
         <dependency>
             <groupId>com.github.hakan-krgn.hCore</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>0.0.9</version>
-            <scope>provided</scope>
+            <artifactId>bukkit-primary</artifactId>
+            <version>0.2.4</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
