--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: 'hDropRemover'
 author: 'Hakan (Hakan#2584)'
-depend: [hCore]
+softdepend: [ hCore ]
 version: 1.5.4
 main: com.hakan.dropremover.DropRemoverPlugin
