Add api-version to plugin.yml

--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -2,4 +2,5 @@ name: 'hDropRemover'
 author: 'Hakan (Hakan#2584)'
 softdepend: [ hCore ]
 version: 1.5.5
+api-version: 1.13
 main: com.hakan.dropremover.DropRemoverPlugin
